# clap-vergen

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: example.yml  rust.yml
clap-vergen/: Cargo.toml
clap-vergen-example/: Cargo.toml
clap-vergen-example/src/: main.rs
clap-vergen-macro/: Cargo.toml
clap-vergen-macro/src/: lib.rs
clap-vergen/src/: lib.rs
src/: lib.rs
