[package]
name = "clap-vergen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"

[build-dependencies]
anyhow = "1.0.59"
vergen = "7.3.2"
