[package]
name = "clap-vergen"
version = "0.1.0"
edition = "2021"

description   = "Reusable version clap subcommand using vergen"
documentation = "https://docs.rs/clap-vergen"
repository    = "https://github.com/termoshtt/clap-vergen"
license       = "MIT OR Apache-2.0"
readme        = "../README.md"

[dependencies]
anyhow = "1.0.59"
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"

[dependencies.clap-vergen-macro]
version = "0.2.0"
path = "../clap-vergen-macro"
